🚀 Configure AI auto-blog for 5-minute intervals
- Update GitHub Actions to run every 5 minutes
- Add dotenv support for local testing
- Fix Gemini API endpoint to use gemini-1.5-flash
- Successfully test AI blog generation with Gemini
- Generate first AI blog post about mobile development

--- a/.github/workflows/auto-blog.yml
+++ b/.github/workflows/auto-blog.yml
@@ -2,8 +2,8 @@ name: AI Auto Blog Generator
 
 on:
   schedule:
-    # Run every day at 9:00 AM UTC (4:00 PM Vietnam time)
-    - cron: '0 9 * * *'
+    # Run every 5 minutes (for testing - change later)
+    - cron: '*/5 * * * *'
   workflow_dispatch: # Allow manual trigger
     inputs:
       force_generate:
