🔧 Fix Nuxt build meta 404 errors for GitHub Pages
- Add static deployment configuration (nuxt.config.static.ts)
- Disable SSR and payload extraction for static sites
- Fix YAML frontmatter formatting in AI-generated posts
- Add .nojekyll file to prevent Jekyll processing
- Update GitHub Actions workflows for static deployment
- Fix AI blog script to generate proper YAML quotes
- Successfully build and prerender static site

--- a/.github/workflows/auto-blog.yml
+++ b/.github/workflows/auto-blog.yml
@@ -66,6 +66,7 @@ jobs:
       if: steps.verify-changed-files.outputs.changed == 'true'
       env:
         BASE_URL: /${{ github.event.repository.name }}/
+        NUXT_CONFIG_FILE: nuxt.config.static.ts
       run: |
         pnpm generate
 
