🔧 Fix Nuxt Content API 404 errors for static deployment
- Configure content API for static generation
- Enable content search indexing
- Update static config with proper content settings
- Successfully prerender content APIs and cache
- Fix YAML frontmatter in AI-generated posts
- Build generates proper static files with content APIs

--- a/.github/workflows/auto-blog.yml
+++ b/.github/workflows/auto-blog.yml
@@ -2,8 +2,8 @@ name: AI Auto Blog Generator
 
 on:
   schedule:
-    # Run every 5 minutes (for testing - change later)
-    - cron: '*/5 * * * *'
+    # Run every 2 hours (more reasonable)
+    - cron: '0 */2 * * *'
   workflow_dispatch: # Allow manual trigger
     inputs:
       force_generate:
