--- a/.github/workflows/auto-blog.yml
+++ b/.github/workflows/auto-blog.yml
@@ -2,8 +2,8 @@ name: AI Auto Blog Generator
 
 on:
   schedule:
-    # Run every 2 hours (more reasonable)
-    - cron: '0 */2 * * *'
+    # Run twice daily: 9 AM and 9 PM UTC (4 PM and 4 AM Vietnam time)
+    - cron: '0 9,21 * * *'
   workflow_dispatch: # Allow manual trigger
     inputs:
       force_generate:
@@ -34,6 +34,14 @@ jobs:
       with:
         version: 10.6.2
 
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-
+
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
 
@@ -42,6 +50,8 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         CLAUDE_API_KEY: ${{ secrets.CLAUDE_API_KEY }}
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
       run: node scripts/ai-auto-blog.js
 
     - name: Check for changes
@@ -59,7 +69,11 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "AI Blog Generator"
         git add content/posts/
-        git commit -m "🤖 Auto-generated blog post - $(date +'%Y-%m-%d')"
+
+        # Count new posts
+        NEW_POSTS=$(git diff --cached --name-only | wc -l)
+
+        git commit -m "🤖 AI Blog Batch: ${NEW_POSTS} new posts - $(date +'%Y-%m-%d %H:%M')"
         git push
 
     - name: Build for GitHub Pages
